--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
             <h1>Your password is:</h1>
             <div id="yourpass"></div>
-            <a class="waves-effect waves-light btn">
-                <i class="material-icons left">send</i>
+            <a href="#" onclick="alert('ok');" class="waves-effect waves-light btn">
+                <i class="material-icons left">save</i>
                 Save
             </a>
 
