--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <body>
 
         <div class="card">
-            <p>Nome: <span id="nom"></span></p>
-            <p>Cognome: <span id="cogn"></span></p>
-            <p>Colore: <span id="color"></span></p>
+            <p><strong>Nome:</strong>  <span id="nom"></span></p>
+            <p><strong>Cognome:</strong>  <span id="cogn"></span></p>
+            <p><strong>Colore:</strong>  <span id="color"></span></p>
 
             <h1>Your password is:</h1>
             <div id="yourpass"></div>
